# GpuArray

./: CMakeLists.txt  main.cpp  main.f90
src/include/: GpuArray.h
src/src/: GpuArray.cpp  GpuArray.cu  GpuArray.f90
